// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PostSwipable Component has onRef 1`] = `
<ScrollableTabView
  contentProps={Object {}}
  initialPage={0}
  locked={false}
  onChangeTab={[Function]}
  onScroll={[Function]}
  page={-1}
  prerenderingSiblingsNumber={0}
  renderTabBar={false}
  scrollWithoutAnimation={false}
  tabBarPosition="top"
/>
`;

exports[`Testing PostSwipable Component is solved 1`] = `
<ScrollableTabView
  contentProps={Object {}}
  initialPage={0}
  locked={false}
  onChangeTab={[Function]}
  onScroll={[Function]}
  page={-1}
  prerenderingSiblingsNumber={0}
  renderTabBar={false}
  scrollWithoutAnimation={false}
  tabBarPosition="top"
/>
`;

exports[`Testing PostSwipable Component renders with placeholder 1`] = `
<ScrollableTabView
  contentProps={Object {}}
  initialPage={0}
  locked={false}
  onChangeTab={[Function]}
  onScroll={[Function]}
  page={-1}
  prerenderingSiblingsNumber={0}
  renderTabBar={false}
  scrollWithoutAnimation={false}
  tabBarPosition="top"
>
  <Styled(Tab)
    heading=""
    key=""
  >
    <PostLoadIndicator
      page={true}
    />
  </Styled(Tab)>
</ScrollableTabView>
`;
